--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-_build
-deps
+#App artifacts
+/_build
+/deps
+/*.ez
+
+# Generated on crash by the VM
+erl_crash.dump
+
+/config/*.secrete.exs
+/doc
+/log
